--- a/correlation_strength.ipynb
+++ b/correlation_strength.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlation strength\n",
+    "\n",
+    "Charles Xu @ Caltech, 20240807\n",
+    "\n",
+    "This notebook illustrates the notion of correlation strength in the Ising model with an example implementation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
